implement user authentication

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ MYSQL_PORT = "3306"
 MYSQL_USERNAME = "root"
 MYSQL_PASSWORD = "4975373953"
 MYSQL_DATABASE = "ipsc_scoreboard"
+
+##JWT
+JSW_SECRET = "JDM*(!@UE(PXUW USDJDJWDjij))"
